--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "personal_app_progressive",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,5 +13,8 @@
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
