--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.18.12",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1"
   }
 }
