--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
-    "mdi": "^1.9.33"
+    "mdi": "^1.9.33",
+    "nprogress": "^0.2.0"
   }
 }
